fix: don't cut off last thread in left nav

--- a/app/stylus/mutants-layout.styl
+++ b/app/stylus/mutants-layout.styl
@@ -153,7 +153,7 @@ html.forum, html.profile, html.search
             margin 0 grid 0 (grid/2)
 
       .thread:last-child
-        margin-bottom (grid*10)
+        padding-bottom (grid*9)
   #left_chrome
     display none
   #main_content
